<resources>
    <string name="app_name">CoFee</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_count">Link new count</string>
    <string name="title_activity_count">$fee_name</string>
    <string name="action_history">History</string>
    <string name="action_add_coffee_type">Add coffee type</string>
    <string name="action_clean_slate">Clean slate</string>
    <string name="action_goto_list">Other counts</string>
    <string name="action_buy_capsules">Buy capsules</string>
    <string name="action_sync">Sync</string>
    <string name="title_activity_buy_capsules">Buy capsules</string>
    <string name="title_activity_history">Count History</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_create_count">CreateCountActivity</string>
</resources>
