<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_history"
        android:title="@string/action_history"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_buy_capsules"
        android:title="@string/action_buy_capsules"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_clean_slate"
        android:title="@string/action_clean_slate"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_goto_list"
        android:title="@string/action_goto_list"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
